--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="main-bg">
 		<div class="orbita">
-			<img src="Imagens/OrbitaCompleta.png" alt="">
+			<img src="Imagens/OrbitaCompleta.png">
 		</div>
 		<header>
 			<div class="container">
@@ -44,15 +44,42 @@
 					</ul>
 				</main>
 			</div>
-			<div class="css_gradient"></div>
 		</section>
 	</div>
 
-	<section class="sobre_nos">
-		<div class="container">
+	<div class="sobre_nos_bg">
+		<section>
+			<div class="container">
+				<div class="sobre_nos_content">
 
-		</div>
-	</section>
+					<div class="sobre_nos_box">
+						<div class="sobre_nos_image"></div>
+					</div>
+
+					<div class="sobre_nos_text">
+						<div class="sobre_nos_title">Sobre nós</div>
+						<div class="sobre_nos_desc">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod doloremque nam explicabo facere sed, recusandae perferendis quis voluptate harum sit eligendi dignissimos aliquam illum iste nisi facilis, aperiam debitis minus.
+						</div>
+					</div>
+				</div>
+
+				<div class="integrante_content">
+					
+					<div class="integrante_text">
+						<div class="integrante_title">Integrante</div>
+						<div class="integrante_desc">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod doloremque nam explicabo facere sed, recusandae perferendis quis voluptate harum sit eligendi dignissimos aliquam illum iste nisi facilis, aperiam debitis minus.
+						</div>
+					</div>
+
+					<div class="integrante_box">
+						<div class="integrante_image"></div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 
 </body>
 
