--- a/index.html
+++ b/index.html
@@ -2,85 +2,190 @@
 <html lang="pt-br">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Intersight Co</title>
-	<link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Intersight</title>
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/animationOrbita.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
-	<div class="main-bg">
-		<div class="orbita">
-			<img src="Imagens/OrbitaCompleta.png">
-		</div>
-		<header>
-			<div class="container">
-				<nav>
-					<div class="logo-image">
-						<img src="Imagens/Logo Intersight (Preta).png" alt="Logo intersight" />
-					</div>
 
-					<div>
-						<ul>
-							<li><a href="#">Sobre nós</a></li>
-							<li><a href="#">Serviços</a></li>
-							<li><a href="#">Portfólio</a></li>
-							<li><a href="#">Perguntas Frequentes</a></li>
-							<li><a href="#" class="nav-active">Contrate-nos</a></li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</header>
 
-		<section id="home">
-			<div class="container">
-				<main>
-					<ul>
-						<li>REVOLUCIONE.</li>
-						<li>CRIE.</li>
-						<li>INSPIRE.</li>
-						<li>SEJA DIFERENTE.</li>
-					</ul>
-				</main>
-			</div>
-		</section>
-	</div>
+    <div class="main-bg">
 
-	<div class="sobre_nos_bg">
-		<section>
-			<div class="container">
-				<div class="sobre_nos_content">
+        <div class="estacao">
+            <img src="Imagens/Estação/Orbita 1.png" class="orbita1" />
+            <img src="Imagens/Estação/Orbita 2.png" class="orbita2" />
+            <img src="Imagens/Estação/Planeta.png" class="planeta" />
+        </div>
 
-					<div class="sobre_nos_box">
-						<div class="sobre_nos_image"></div>
-					</div>
+        <header>
+            <div class="container">
+                <div class="custom-nav">
+                    <nav class="navbar navbar-expand-lg">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                        <a class="navbar-brand" href="#">
+                            <img src="Imagens/Logo Intersight (Preta).png" alt="logo" class="logo-navbar">
+                        </a>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Sobre Nós</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Serviços</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Portfólio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Perguntas Frequentes</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#">Contrate-nos</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </header>
 
-					<div class="sobre_nos_text">
-						<div class="sobre_nos_title">Sobre nós</div>
-						<div class="sobre_nos_desc">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod doloremque nam explicabo facere sed, recusandae perferendis quis voluptate harum sit eligendi dignissimos aliquam illum iste nisi facilis, aperiam debitis minus.
-						</div>
-					</div>
-				</div>
 
-				<div class="integrante_content">
-					
-					<div class="integrante_text">
-						<div class="integrante_title">Integrante</div>
-						<div class="integrante_desc">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod doloremque nam explicabo facere sed, recusandae perferendis quis voluptate harum sit eligendi dignissimos aliquam illum iste nisi facilis, aperiam debitis minus.
-						</div>
-					</div>
 
-					<div class="integrante_box">
-						<div class="integrante_image"></div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</div>
 
+        <section id="home">
+            <div class="container">
+                <main>
+                    <ul>
+                        <li>REVOLUCIONE.</li>
+                        <li>CRIE.</li>
+                        <li>INSPIRE.</li>
+                        <li>SEJA DIFERENTE.</li>
+                    </ul>
+                </main>
+            </div>
+        </section>
+    </div>
+
+    <div class="sobre_nos_bg">
+        <section id="aboutUs">
+            <div class="container">
+                <div class="sobre_nos_content">
+                    <div class="sobre_nos_box">
+                        <div class="sobre_nos_image"></div>
+                    </div>
+
+                    <div class="sobre_nos_text">
+                        <div class="sobre_nos_title">Sobre nós</div>
+                        <div class="sobre_nos_desc">
+                            <p>
+                                Na InterSight CO., impulsionamos sua marca online com sites
+                                modernos e estratégicos para alcançar seu público. Cada
+                                projeto é único, unindo inovação e segurança para fortalecer
+                                sua presença digital.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="integrante_content">
+                    <div class="integrante_text">
+                        <div class="integrante_title">Integrante</div>
+                        <div class="integrante_desc">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+                                doloremque nam explicabo facere sed, recusandae perferendis
+                                quis voluptate harum sit eligendi dignissimos aliquam illum
+                                iste nisi facilis, aperiam debitis minus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="integrante_box">
+                        <div class="integrante_image"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <section id="services" class="servicos_bg">
+        <div class="background-layer"></div>
+        <div class="container">
+            <div class="servicos_content">
+                <h2 class="servicos_title">Serviços</h2>
+                <p class="servicos_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat repellendus
+                    explicabo ratione quisquam aliquid dolor nesciunt cum. Eum exercitationem sapiente maxime, dolorem
+                    sit
+                    non laboriosam, soluta omnis asperiores corporis cum?</p>
+
+
+                <div class="servicos_box">
+                    <div class="servicos_box1">
+                        <div class="servicos_box_content">
+                            <div class="box_tittle">Desenvolvimento de Aplicativos</div>
+                            <div class="box_desc">
+                                Desenvolvemos aplicativos funcionais, customizados e intuitivos para todos os tipos de
+                                negócios. Seja Android ou iOS, transformaremos sua ideia em um aplicativo útil e
+                                envolvente
+                                para garantir a melhor experiência do usuário.
+
+                            </div>
+                            <div class="box_image"></div>
+                        </div>
+                    </div>
+                    <div class="servicos_box2">
+                        <div class="servicos_box_content">
+                            <div class="box_tittle">Gerenciamento de mídias sociais</div>
+                            <div class="box_desc">
+                                Gerenciamos sua presença online com estratégias de conteúdo eficazes e envolventes.
+                                Cuidamos das suas mídias sociais, aumentando a visibilidade e fortalecendo a conexão da
+                                sua marca com o público.
+                            </div>
+                            <div class="box_image"></div>
+                        </div>
+                    </div>
+                    <div class="servicos_box3">
+                        <div class="servicos_box_content">
+                            <div class="box_tittle">Desenvolvimento Web</div>
+                            <div class="box_desc">
+                                Desenvolvemos sites modernos, responsivos e otimizados para SEO, garantindo que sua
+                                empresa se destaque no universo online. De sites corporativos a e-commerces, criamos
+                                plataformas que representam a essência da sua marca e capturam seu público.
+                            </div>
+                            <div class="box_image"></div>
+                        </div>
+                    </div>
+                    <div class="servicos_box4">
+                        <div class="servicos_box_content">
+                            <div class="box_tittle">Automação Web</div>
+                            <div class="box_desc">
+                                Simplificamos processos repetitivos com soluções de automação web. Criamos fluxos
+                                eficientes, integrações de sistemas e bots que otimizam o atendimento. Nossa automação
+                                eleva a produtividade e libera sua equipe para focar no que realmente importa.
+                            </div>
+                            <div class="box_image"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
