--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/footer.css">
+
+    <link rel="stylesheet" href="css/faq.css">
 </head>
 
 <body>
@@ -30,10 +33,10 @@
                 <div class="custom-nav">
                     <nav class="navbar navbar-expand-lg">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
                         <a class="navbar-brand" href="#">
                             <img src="Imagens/Logo Intersight (Preta).png" alt="logo" class="logo-navbar">
                         </a>
@@ -65,7 +68,7 @@
 
 
         <section id="home">
-            <div class="container">
+            <div class="container background_gradient">
                 <main>
                     <ul>
                         <li>REVOLUCIONE.</li>
@@ -181,9 +184,194 @@
                 </div>
             </div>
         </div>
-
     </section>
 
+    <!-- <section id="portfolio">
+		<div class="container">
+			<h2 class="carrossel_title">Carrossel</h2>
+			<div class="carousel_container">
+				<button class="carousel_btn prev">&#9664;</button>
+				<div class="carousel">
+					<div class="carousel_items">
+						
+						<div class="carrossel_content">
+							<div class="carrossel_img">
+								<img src="Imagens/DesenvolvimentoWeb.jpg" alt="Projeto 1">
+							</div>
+							<div class="carrossel_item_title">Projeto</div>
+						</div>
+					</div>
+				</div>
+				<button class="carousel_btn next">&#9654;</button>
+			</div>
+		</div>
+	</section>
+	 -->
+
+    <section></section>
+    <section id="FAQ">
+        <div class="container">
+            <h2 class="faq-title">Perguntas<br>Frequentes</h2>
+            <div class="faq-desc">
+                Tire suas dúdivdas
+            </div>
+            <div class="caixas_faq">
+                <div class="accordion accordion-flush blue" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                O que é a Intersigh Co. e como os nossos serviços funcionam?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">A Intersigh Co. é uma empresa especializada em automação,
+                                desenvolvimento web e marketing digital integrado. Ajudamos empresas a otimizar
+                                processos, criar plataformas personalizadas e melhorar sua presença online por meio de
+                                estratégias de marketing digital.</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                aria-controls="flush-collapseTwo">
+                                Quais formas de pagamento são aceitas?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Aceitamos pagamentos via cartão de crédito e débito,
+                                transferência bancária, boleto bancário (para serviços pontuais) e PayPal.</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                aria-controls="flush-collapseThree">
+                                Qual é o prazo de entrega do meu projeto?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Os prazos variam conforme o serviço. Projetos de desenvolvimento
+                                web geralmente levam de 4 a 8 semanas, automação de 2 a 6 semanas, e campanhas de
+                                marketing digital começam rapidamente, com relatórios mensais de performance.</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                aria-controls="flush-collapseFour">
+                                Posso realizar a troca ou devolução de um serviço?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFour" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Não oferecemos trocas ou devoluções, mas garantimos revisões
+                                durante o processo e trabalhamos para ajustar o serviço conforme as suas necessidades
+                                até que fique satisfeito.</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFive" aria-expanded="false"
+                                aria-controls="flush-collapseFive">
+                                Como posso entrar em contato com o suporte ao cliente?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFive" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Você pode nos contatar por e-mail (suporte@intersigh.com.br),
+                                telefone, chat ao vivo em nosso site ou através do formulário de contato. Estamos
+                                disponíveis de segunda a sexta-feira, das 9h às 18h.</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseSix" aria-expanded="false"
+                                aria-controls="flush-collapseSix">
+                                Os meus dados pessoais estão seguros no site?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseSix" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Sim, usamos tecnologia SSL para proteger seus dados e seguimos
+                                as diretrizes da LGPD para garantir que suas informações sejam tratadas com segurança e
+                                transparência.</div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseSeven" aria-expanded="false"
+                                aria-controls="flush-collapseSeven">
+                                Vocês oferecem descontos ou promoções?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseSeven" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Sim, oferecemos promoções e descontos periodicamente, além de
+                                condições especiais para pacotes de serviços. Inscreva-se na nossa newsletter ou
+                                siga-nos nas redes sociais para ficar por dentro das ofertas.</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="logo-footer">
+                    <img src="Imagens/logo-icon.png" alt="logo">
+                </div>
+                <div class="adress-footer">
+
+                    <div class="footer-links-content">
+                        <div class="footer-title">
+                            Páginas
+                        </div>
+
+                        <div class="footer-links">
+                            <a href="politicaeprivacidade.html">Politica e Privacidade</a>
+                            <a href="#">Sobre nós</a>
+                            <a href="#">Serviços</a>
+                            <a href="#">Portfólio</a>
+                            <a href="#">FAQ</a>
+                        </div>
+                    </div>
+
+                    <div class="footer-social-content">
+                        <div class="footer-title">
+                            Contato
+                        </div>
+
+                        <div class="footer-links">
+                            <a href="#">@intersight.co</a>
+                            <a href="#">(11) 95999-0471</a>
+                            <a href="#">Contato@intersight.com</a>
+                        </div>
+                    </div>
+
+                   
+            </div>
+        </div>
+    </footer>
 
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </body>
