--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Sobre Nós</a>
+                                    <a class="nav-link" href="#aboutUs">Sobre Nós</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Serviços</a>
+                                    <a class="nav-link" href="#services">Serviços</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Portfólio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Perguntas Frequentes</a>
+                                    <a class="nav-link" href="#FAQ">Perguntas Frequentes</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" href="#">Contrate-nos</a>
